--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@svgr/webpack": "^5.4.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.0.0",
     "@types/webpack": "^4.41.17",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
@@ -75,6 +76,7 @@
     "terser-webpack-plugin": "^2.3.7",
     "typescript": "^3.9.5",
     "url-loader": "^4.1.0",
+    "uuid": "^8.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-extension-reloader": "^1.1.4",
