--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.2",
+    "ace-builds": "^1.4.12",
     "react": "^16.13.1",
+    "react-ace": "^9.1.1",
     "react-dom": "^16.13.1",
     "react-use-websocket": "^2.1.1",
     "webext-base-css": "^1.1.0",
